--- a/index.html
+++ b/index.html
@@ -1,46 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Ronnie ❤️ Summer</title>
-
-<style>
-    body {
-        margin: 0;
-        font-family: 'Georgia', serif;
-        background: linear-gradient(#ffd6e8, #fff0f5);
-        text-align: center;
-        color: #5a1a2b;
-        overflow-x: hidden;
-    }
-
-    h1 {
-        margin-top: 60px;
-        font-size: 3em;
-    }
-
-    .flowers {
-        font-size: 3rem;
-        margin: 30px 0;
-    }
-
-    .card {
-        background: white;
-        max-width: 600px;
-        margin: 40px auto;
-        padding: 30px;
-        border-radius: 20px;
-        box-shadow: 0 10px 25px rgba(0,0,0,0.1);
-    }
-
-    p {
-        font-size: 1.2em;
-        line-height: 1.6;
-    }
-
-    button {
-        margin-top: 20px;
-        padding: 12px 25px;
-        font-size: 1em;
-        border: none;
-        border-radius: 25p
+    <title>Ronnie ❤️ Summer</title>
+</head>
+<body style="text-align:center; background:pink;">
+    <h1>It works! 💖</h1>
+    <p>Ronnie loves Summer</p>
+</body>
+</html>
