--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Ronnie ❤️ Summer</title>
-</head>
-<body style="text-align:center; background:pink;">
-    <h1>It works! 💖</h1>
-    <p>Ronnie loves Summer</p>
-</body>
-</html>
+<meta charset="UTF-8">
+<title>Ronnie ❤️ Summer</title>
+
+<style>
+body {
+    margin: 0;
+    font-family: Georgia, serif;
+    background: linear-gradient(#ffd6e8, #fff0f5);
+    text-align: center;
+    color: #5a1a2b;
+}
+
+h1 {
+    margin-top: 60px;
+    font-size: 3em;
+}
+
+.flowers {
+    font-size: 3rem;
