--- a/index.html
+++ b/index.html
@@ -11,16 +11,24 @@ body {
     background: linear-gradient(#ffd6e8, #fff0f5);
     text-align: center;
     color: #5a1a2b;
+    overflow-x: hidden;
 }
 
 h1 {
-    margin-top: 60px;
+    margin-top: 50px;
     font-size: 3em;
 }
 
 .flowers {
     font-size: 3rem;
     margin: 20px 0;
+}
+
+.counter {
+    font-size: 1.3em;
+    margin-top: 10px;
+    color: #b11235;
+    font-weight: bold;
 }
 
 .card {
@@ -42,48 +50,4 @@ button {
     padding: 12px 25px;
     font-size: 1em;
     border: none;
-    border-radius: 25px;
-    background: #ff4d6d;
-    color: white;
-    cursor: pointer;
-}
-
-#surprise {
-    display: none;
-    margin-top: 20px;
-    font-weight: bold;
-    color: #b11235;
-}
-</style>
-</head>
-
-<body>
-
-<h1>Happy Valentine’s Day, Summer ❤️</h1>
-
-<div class="flowers">🌸 🌹 🌷 💐 🌺</div>
-
-<div class="card">
-    <p>
-        Dear <strong>Summer</strong>,<br><br>
-        From the moment <strong>we got together on April 8th, 2025</strong>,
-        my life changed in the most beautiful way.
-        Every laugh, every smile, and every moment with you means more to me
-        than I could ever explain.
-        You are my favorite person, my best friend, and my greatest love.
-        <br><br>
-        Forever yours,<br>
-        <strong>Ronnie ❤️</strong>
-    </p>
-
-    <button onclick="document.getElementById('surprise').style.display='block'">
-        Click for a surprise 💌
-    </button>
-
-    <div id="surprise">
-        I love you endlessly, Summer 💖
-    </div>
-</div>
-
-</body>
-</html>
+    border-
